--- a/Project.html
+++ b/Project.html
@@ -61,22 +61,294 @@
 
                         </div>
                     </div>
+
                     <div class="row Section1">
+
+                      <div class="col-sm-6">
+                        <a  class="Project-box" href="" >
+                        <div class="card boxx">
+                          <div class="card-body">
+                            <h5 class="card-title">eCommerce Website</h5>
+                            <p class="card-text project-text">Developed an eCommerce website using Nodejs, Express and EJS.The website resembles a real store which
+                            has features like signup, signin, cart page, logout etc.
+                            </p>
+
+                          </div>
+                        </div>
+                      </a>
+                      </div>
+
                       <div class="col-sm-6">
                         <a class="Project-box" href="https://samyakkhabiya.github.io/Covid19India.io/">
                         <div class="card boxx">
                           <div class="card-body">
                             <h5 class="card-title">Covid19India</h5>
                             <p class="card-text project-text">I have made a live covid 19 infection tracker with real time update of 
-                              infection rate ,death rate,active cases tracker of all indian states with use of covid19api data 
-                              <span class="iconify" data-icon="logos:jquery" data-inline="false"></span>
-                              <span class="iconify" data-icon="logos:javascript" data-inline="false"></span>
+                              infection rate ,death rate,active cases tracker of all indian states with use of covid19api data
                             </p>
 
                           </div>
                         </div>
                         </a>
                       </div>
+
+
+                      <div class="col-sm-6">
+                        <a class="Project-box" href="https://samyakkhabiya.github.io/todo_list.github.io">
+                        <div class="card boxx">
+                          <div class="card-body">
+                            <h5 class="card-title">To-Do List</h5>
+                            <p class="card-text project-text">To-Do List project is an application specially built to keep track of errands or tasks that need to be done.
+                            </p>
+
+                          </div>
+                        </div>
+                        </a>
+                      </div>
+
+
+
+
+                      <div class="col-sm-6">
+                        <a class="Project-box" href="https://samyakkhabiya.github.io/Drink-water.github.io/">
+                        <div class="card boxx">
+                          <div class="card-body">
+                            <h5 class="card-title">Drinking Water Tracker</h5>
+                            <p class="card-text project-text">a drinking water tracker is a Javascript based application that helps you create healthy water-drinking habits.
+                            </p>
+
+                          </div>
+                        </div>
+                        </a>
+                      </div>
+
+
+
+                      <div class="col-sm-6">
+                        <a class="Project-box" href="https://samyakkhabiya.github.io/Clock.github.io/">
+                        <div class="card boxx">
+                          <div class="card-body">
+                            <h5 class="card-title">Digital Clock</h5>
+                            <p class="card-text project-text">The aim of the project is to design a twelve hour Digital Clock that displays the time digitally  with a beautiful UI
+                            </p>
+
+                          </div>
+                        </div>
+                        </a>
+                      </div>
+
+
+                      <div class="col-sm-6">
+                        <a class="Project-box" href="https://samyakkhabiya.github.io/Quiz.github.io/">
+                        <div class="card boxx">
+                          <div class="card-body">
+                            <h5 class="card-title">Quiz App</h5>
+                            <p class="card-text project-text">Quiz app is a JavaScript powered application that allows users to do four multiple choice questions which saves their result in the local storage of the user's browser.
+                            </p>
+
+                          </div>
+                        </div>
+                        </a>
+                      </div>
+
+
+                      <div class="col-sm-6">
+                        <a class="Project-box" href="https://samyakkhabiya.github.io/Password-Strength-Blurr.github.io/">
+                        <div class="card boxx">
+                          <div class="card-body">
+                            <h5 class="card-title">Password Strength</h5>
+                            <p class="card-text project-text">This is a password strength estimator which checks password strength of a certain passphrase.The background is blur at the start and stronger the password, better the image quality.
+                            </p>
+
+                          </div>
+                        </div>
+                        </a>
+                      </div>
+
+
+                      <div class="col-sm-6">
+                        <a class="Project-box" href="https://samyakkhabiya.github.io/Pokemon-API.github.io/">
+                        <div class="card boxx">
+                          <div class="card-body">
+                            <h5 class="card-title">Pokemon Series</h5>
+                            <p class="card-text project-text">Single page application of the characters of the Pokemon series created with vanilla JavaScript and styled with CSS. This simple app loads data from an external API and displays each object.
+                            </p>
+
+                          </div>
+                        </div>
+                        </a>
+                      </div>
+
+
+                      <div class="col-sm-6">
+                        <a class="Project-box" href="https://samyakkhabiya.github.io/Covid19India.io/">
+                        <div class="card boxx">
+                          <div class="card-body">
+                            <h5 class="card-title">Covid19India</h5>
+                            <p class="card-text project-text">I have made a live covid 19 infection tracker with real time update of 
+                              infection rate ,death rate,active cases tracker of all indian states with use of covid19api data
+                            </p>
+
+                          </div>
+                        </div>
+                        </a>
+                      </div>
+
+
+                      <div class="col-sm-6">
+                        <a class="Project-box" href="https://samyakkhabiya.github.io/Notes.github.io/">
+                        <div class="card boxx">
+                          <div class="card-body">
+                            <h5 class="card-title">Notes</h5>
+                            <p class="card-text project-text">This is a basic app to manage simple notes on the web. This app allows users to take notes and stores them in local storage. Users can easily create and store notes using this dynamically created app.
+                            </p>
+
+                          </div>
+                        </div>
+                        </a>
+                      </div>
+
+
+                      <div class="col-sm-6">
+                        <a class="Project-box" href="https://samyakkhabiya.github.io/Random-Password-Generator.github.io/">
+                        <div class="card boxx">
+                          <div class="card-body">
+                            <h5 class="card-title">Password Generator</h5>
+                            <p class="card-text project-text">A simple javascript password generator, giving you choices about what characters you want to use to make up the password. The user will be presented with a password matching the selected criterias
+                            </p>
+
+                          </div>
+                        </div>
+                        </a>
+                      </div>
+
+
+                      <div class="col-sm-6">
+                        <a class="Project-box" href="https://samyakkhabiya.github.io/movie-app.github.io/">
+                        <div class="card boxx">
+                          <div class="card-body">
+                            <h5 class="card-title">Movie app</h5>
+                            <p class="card-text project-text">It is a movie app made with HTML, CSS, Javascript and Bootstrap. It pulls movies from The Movie Database using API calls and lists them with their detailed overviews.
+                            </p>
+
+                          </div>
+                        </div>
+                        </a>
+                      </div>
+
+
+                      <div class="col-sm-6">
+                        <a class="Project-box" href="https://samyakkhabiya.github.io/Login-design.github.io/">
+                        <div class="card boxx">
+                          <div class="card-body">
+                            <h5 class="card-title">Login Form</h5>
+                            <p class="card-text project-text">A login form made with JavaScript that contains two input fields i.e. username and password, As user clicks on login button, JavaScript validation function comes into act .
+                            </p>
+
+                          </div>
+                        </div>
+                        </a>
+                      </div>
+
+                      <div class="col-sm-6">
+                        <a class="Project-box" href="https://samyakkhabiya.github.io/DrawingBoard.github.io/">
+                        <div class="card boxx">
+                          <div class="card-body">
+                            <h5 class="card-title">Drawing Board</h5>
+                            <p class="card-text project-text">JAVASCRIPT based web app drawing board consists of a blank canvas surrounded by a few UI elements that control it: a color picker, a pencil,  an eraser, a pencil size chooser, navigations and reset buttons.
+
+                            </p>
+
+                          </div>
+                        </div>
+                        </a>
+                      </div>
+
+                      <div class="col-sm-6">
+                        <a class="Project-box" href="https://samyakkhabiya.github.io/Bad-Jokes.github.io/">
+                        <div class="card boxx">
+                          <div class="card-body">
+                            <h5 class="card-title">Jokes app</h5>
+                            <p class="card-text project-text">A JavaScript based web app bad jokes with good UI and a button that presents a new joke everytime .
+
+                            </p>
+
+                          </div>
+                        </div>
+                        </a>
+                      </div>
+
+                      <div class="col-sm-6">
+                        <a class="Project-box" href="https://samyakkhabiya.github.io/Random-Choice-Picker.github.io/">
+                        <div class="card boxx">
+                          <div class="card-body">
+                            <h5 class="card-title">Choice Picker</h5>
+                            <p class="card-text project-text">Random choice picker is a JavaScript project that can pick any one thing from the options given by the user automatically.
+
+                            </p>
+
+                          </div>
+                        </div>
+                        </a>
+                      </div>
+
+                      <div class="col-sm-6">
+                        <a class="Project-box" href="https://samyakkhabiya.github.io/Auto-Text-effect.github.io/">
+                        <div class="card boxx">
+                          <div class="card-body">
+                            <h5 class="card-title">Text Effect</h5>
+                            <p class="card-text project-text">Auto text effect is a JavaScript based project that generates attractive text effects with speed control by user .
+
+                            </p>
+
+                          </div>
+                        </div>
+                        </a>
+                      </div>
+
+                      <div class="col-sm-6">
+                        <a class="Project-box" href="https://samyakkhabiya.github.io/Insect-Catch-Game.github.io/">
+                        <div class="card boxx">
+                          <div class="card-body">
+                            <h5 class="card-title">Insect Catcher Game</h5>
+                            <p class="card-text project-text">Insect  catcher is a fun JAVASCRIPT based game that contains insect selection followed by user interaction.
+
+                            </p>
+
+                          </div>
+                        </div>
+                        </a>
+                      </div>
+
+                      <div class="col-sm-6">
+                        <a class="Project-box" href="https://samyakkhabiya.github.io/Event-KeyCodes.github.io/">
+                        <div class="card boxx">
+                          <div class="card-body">
+                            <h5 class="card-title">Find AASCI Value</h5>
+                            <p class="card-text project-text">event key code is a javascript based webapp which generates a code and an  ASCI code of any character that has been inserted by user .
+
+                            </p>
+
+                          </div>
+                        </div>
+                        </a>
+                      </div>
+
+                      <!-- <div class="col-sm-6">
+                        <a class="Project-box" href="">
+                        <div class="card boxx">
+                          <div class="card-body">
+                            <h5 class="card-title"></h5>
+                            <p class="card-text project-text">
+
+                            </p>
+
+                          </div>
+                        </div>
+                        </a>
+                      </div> -->
+
+                      
                       
                       <!-- <div class="col-sm-6">
                         <a  class="Project-box" href="" >
