--- a/contact.html
+++ b/contact.html
@@ -59,7 +59,7 @@
     <section id="contact">
         <div class="row first-section">
             <div class="col-lg-6 col-md-6">
-                <img class = "Profilepic" src="Image/5.jpeg" alt="">
+                <img class = "Profilepic" src="Image/samyak.jpg" alt="">
             </div>
             <div class="col-lg-6 col-md-6 context">
                 <h1>Reach out to me !</h1>
@@ -71,7 +71,7 @@
                      <li class="icon"><a href="https://www.linkedin.com/in/samyak-khabiya-892906199/" target=_blank><span class="iconify linkedin" data-icon="entypo-social:linkedin-with-circle" data-inline="false"  data-width="50" data-height="50"></span></li></a>
                     <li class="icon"><a href="mailto:samyakkhabiya123@gmail.com" target=_blank><span class="iconify google" data-icon="ant-design:google-plus-circle-filled" data-inline="false" data-width="50" data-height="50"></span></li></a>
                     </ul>
-                    <a href="https://drive.google.com/file/d/1_dJxksuUqCGpRwEZKfAcEyYMkS1xSq3E/view?usp=sharing" target=_blank><button type="button" class="btn btn-primary btn-lg Resume">See my Resume</button></a>
+                    <a href="https://drive.google.com/file/d/1M5aba0gjYgBrBoudjp5H1o6nMnOtJxVP/view?usp=sharing" target=_blank><button type="button" class="btn btn-primary btn-lg Resume">See my Resume</button></a>
              </div>
         </div>
         </section>
