--- a/Project.html
+++ b/Project.html
@@ -179,27 +179,12 @@
                         </a>
                       </div>
 
-
-                      <div class="col-sm-6">
-                        <a class="Project-box" href="https://samyakkhabiya.github.io/Covid19India.io/">
-                        <div class="card boxx">
-                          <div class="card-body">
-                            <h5 class="card-title">Covid19India</h5>
-                            <p class="card-text project-text">I have made a live covid 19 infection tracker with real time update of 
-                              infection rate ,death rate,active cases tracker of all indian states with use of covid19api data
-                            </p>
-
-                          </div>
-                        </div>
-                        </a>
-                      </div>
-
-
+                        
                       <div class="col-sm-6">
                         <a class="Project-box" href="https://samyakkhabiya.github.io/Notes.github.io/">
                         <div class="card boxx">
                           <div class="card-body">
-                            <h5 class="card-title">Notes</h5>
+                            <h5 class="card-title">Notes App</h5>
                             <p class="card-text project-text">This is a basic app to manage simple notes on the web. This app allows users to take notes and stores them in local storage. Users can easily create and store notes using this dynamically created app.
                             </p>
 
@@ -243,20 +228,6 @@
                           <div class="card-body">
                             <h5 class="card-title">Login Form</h5>
                             <p class="card-text project-text">A login form made with JavaScript that contains two input fields i.e. username and password, As user clicks on login button, JavaScript validation function comes into act .
-                            </p>
-
-                          </div>
-                        </div>
-                        </a>
-                      </div>
-
-                      <div class="col-sm-6">
-                        <a class="Project-box" href="https://samyakkhabiya.github.io/DrawingBoard.github.io/">
-                        <div class="card boxx">
-                          <div class="card-body">
-                            <h5 class="card-title">Drawing Board</h5>
-                            <p class="card-text project-text">JAVASCRIPT based web app drawing board consists of a blank canvas surrounded by a few UI elements that control it: a color picker, a pencil,  an eraser, a pencil size chooser, navigations and reset buttons.
-
                             </p>
 
                           </div>
